# pat

./: .env.template  LICENSE  README.md  pat.py  pyproject.toml  requirements.txt
src/perceiver/: perceiver.py
src/perceiver/adapters/: arxiv_adapter.py  audio_adapter.py  base_adapter.py  document_ocr_adapter.py  github_adapter.py  image_ocr_adapter.py  text_adapter.py  web_adapter.py  youtube_adapter.py
src/perceiver/factories/: adapter_factory.py
src/perceiver/models/: perception.py
src/perceiver/utils/: logger.py  utils.py
