[build-system]
requires = ["setuptools>=75.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Perceiver"
version = "0.0.1"
description = "Perceiver"
dynamic = ["dependencies"]
readme = "README.md"
authors = [
    {name = "Luay Gharzeddine", email = "luaygharzeddine@gmail.com"},
]
requires-python = "==3.11.4"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools]
package-dir = {"" = "src"}
package-data = {"*" = ["*"]}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["perceiver*"]
namespaces = false